{{$NEXT}}

    - Windows test fixes
    - perl 5.6 test fixes

1.302149  2018-12-20 09:47:31-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Even more SHM error improvements

1.302148  2018-12-17 13:08:23-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Further Improve SHM error message

1.302147  2018-12-17 12:59:14-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Improve SHM error message

1.302146  2018-12-17 09:06:44-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix SHM test to work on machines without SHM

1.302145  2018-12-12 11:26:32-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix localization error in new test (#820)

1.302144  2018-12-12 09:51:25-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add tests for shmwrite fix (#815)

1.302143  2018-12-11 19:10:37-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix failure to check error code on shmwrite (#815)

1.302142  2018-12-11 11:55:22-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix #814 Windows fork+test failure
    - Fix #819 Documentation updates
    - Fix #810 Verbose TAP newline regression
    - Fix #817 local $TODO bug
    - Fix #812 Another local $TODO bug
    - Fix #815 shm read warning
    - Merge doc fix PR's from magnolia-k (thanks!)

1.302141  2018-11-30 14:27:19-08:00 America/Los_Angeles

    - Fix bug where IPC init failed in preload+fork environments

1.302140  2018-08-13 08:00:25-07:00 America/Los_Angeles

    - No Changes since last release

1.302139  2018-07-17 12:38:37-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Mask warning from the recent IPC fix generated when threaded Test tools are loaded at run-time

1.302138  2018-07-11 09:29:51-07:00 America/Los_Angeles

    - No changes since trial

1.302137  2018-05-25 08:45:13-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make it safe to fork before events in IPC

1.302136  2018-04-19 05:40:11-07:00 America/Los_Angeles

    - Add test2_add_callback_testing_done to Test2::API
