@@ -571,12 +571,18 @@ IPC shmwrite(-1, 'message', 0, 32) failed, this is a fatal error.
     $two->{_pid} = $$;
     $two->{_tid} = $ctid;
 
+    my $ec;
+    {
+        local $! = 22;
+        $ec = "$!";
+    }
+
     $ok = eval { $two->set_ipc_pending('message'); 1 };
     $err = $@;
     ok(!$ok, "Exception");
     is($err, <<"    EOT", "Got exception when shm write fails (with tid/pid)") unless $err =~ m/System V IPC is not implemented/;
 IPC shmwrite(-1, 'message', 0, 32) failed, this is a fatal error.
-  Error: (22) Invalid argument
+  Error: (22) $ec
   Parent  PID: $$
   Current PID: $$
   Parent  TID: $ctid
