@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Fix locale error in Instance.t
     - Windows test fixes
     - perl 5.6 test fixes
 
